virtualbox-ose/TODO
 - This wip version is purely experimental, it is on the way, not completed 
   at all, or just started to compile by wip/kbuild
    kBuild-0.1.5nb20150905 Build framework based on GNU make

 - This is ported from FreeBSD/ports (4.3.30)
   See http://svnweb.freebsd.org/ports/head/emulators/virtualbox-ose/
 - Thus there should be so many things to adjust from FreeBSD to pkgsrc

 - CVE-2015-4813 CVE-2015-4896

 - At beginning:
===> Building for virtualbox-ose-4.3.30
cd /export/WRKOBJDIR/wip/virtualbox-ose/work/VirtualBox-4.3.30/ &&  /bin/sh -c . kBuild/env.sh && VBOX_LIBPATH_X11=/usr/X11R7/lib VBOX_FREEBSD_SRC=/usr/src/sys KBUILD_PA
OBJDIR/wip/virtualbox-ose/work/VirtualBox-4.3.30/kBuild /usr/pkg/bin/kmk -j1
Config.kmk:2463: /export/WRKOBJDIR/wip/virtualbox-ose/work/VirtualBox-4.3.30/out/netbsd.amd64/release/DynamicConfig.kmk: No such file or directory
Config.kmk:5749: /export/WRKOBJDIR/wip/virtualbox-ose/work/VirtualBox-4.3.30/out/netbsd.amd64/release/revision.kmk: No such file or directory
/export/WRKOBJDIR/wip/virtualbox-ose/work/VirtualBox-4.3.30/src/VBox/Main/Makefile.kmk:194: /export/WRKOBJDIR/wip/virtualbox-ose/work/VirtualBox-4.3.30/out/netbsd.amd64/
iwrap.kmk: No such file or directory

 - Current build status (errors are):
   - VBoxRT.so dosen't seem to be generated
     (FreeBSD has):
        7237857 Sep 25 00:19 work/VirtualBox-4.3.30/out/freebsd.amd64/release/obj/VBoxRT/VBoxRT.so
        7237857 Sep 25 00:19 work/VirtualBox-4.3.30/out/freebsd.amd64/release/bin/VBoxRT.so
   - make ends with:

/export/WRKOBJDIR/wip/virtualbox-ose/work/VirtualBox-4.3.30/src/VBox/Runtime/r3/freebsd/rtProcInitExePath-freebsd.cpp:84:51: error: too few arguments to function 'int rtPathFromNative(const char**, const char*, const char*)'
         int rc = rtPathFromNative(&pszTmp, pszPath);
                                                   ^
In file included from /export/WRKOBJDIR/wip/virtualbox-ose/work/VirtualBox-4.3.30/src/VBox/Runtime/r3/freebsd/rtProcInitExePath-freebsd.cpp:43:0:
/export/WRKOBJDIR/wip/virtualbox-ose/work/VirtualBox-4.3.30/src/VBox/Runtime/include/internal/path.h:95:5: note: declared here
 int rtPathFromNative(const char **ppszPath, const char *pszNativePath, const char *pszBasePath);
     ^
/export/WRKOBJDIR/wip/virtualbox-ose/work/VirtualBox-4.3.30/src/VBox/Runtime/r3/freebsd/rtProcInitExePath-freebsd.cpp:89:34: error: too few arguments to function 'void rtPathFreeIprt(const char*, const char*)'
             rtPathFreeIprt(pszTmp);
                                  ^
In file included from /export/WRKOBJDIR/wip/virtualbox-ose/work/VirtualBox-4.3.30/src/VBox/Runtime/r3/freebsd/rtProcInitExePath-freebsd.cpp:43:0:
/export/WRKOBJDIR/wip/virtualbox-ose/work/VirtualBox-4.3.30/src/VBox/Runtime/include/internal/path.h:103:6: note: declared here
 void rtPathFreeIprt(const char *pszPath, const char *pszNativePath);
      ^
kmk: *** [/export/WRKOBJDIR/wip/virtualbox-ose/work/VirtualBox-4.3.30/out/netbsd.amd64/release/obj/RuntimeBldProg/r3/freebsd/rtProcInitExePath-freebsd.o] Error 1
